[gd_scene load_steps=6 format=3 uid="uid://b3lyt2pjdf02y"]

[ext_resource type="Script" path="res://src/multiplayer/players_networking.gd" id="1"]
[ext_resource type="TileSet" uid="uid://dqwyv2gy1rg6y" path="res://textures/tilemap/tilemap.tres" id="2"]
[ext_resource type="PackedScene" path="res://scenes/item/keycard/keycard_level1.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://bm88ukonmbb7r" path="res://scenes/hud.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://b5hahte06un3t" path="res://scenes/player/old_man.tscn" id="5"]

[node name="World" type="Node2D"]
script = ExtResource("1")

[node name="Navigation" type="Node2D" parent="."]

[node name="Map" type="TileMap" parent="Navigation"]
tile_set = ExtResource("2")
format = 2

[node name="Items" type="Node2D" parent="Navigation/Map"]

[node name="StandardKeycard" parent="Navigation/Map/Items" instance=ExtResource("3")]
position = Vector2(-20, 96.181)

[node name="HUD" parent="." instance=ExtResource("4")]

[node name="ServerButton" type="Button" parent="HUD"]
offset_left = 957.703
offset_top = 43.532
offset_right = 1009.7
offset_bottom = 63.532
focus_mode = 1
toggle_mode = true
text = "Server"

[node name="ClientButton" type="Button" parent="HUD"]
offset_left = 957.703
offset_top = 76.181
offset_right = 1006.7
offset_bottom = 96.181
focus_mode = 1
toggle_mode = true
text = "Client"

[node name="PingDisplay" type="Label" parent="HUD"]
offset_right = 40.0
offset_bottom = 14.0

[node name="Player" parent="." instance=ExtResource("5")]

[connection signal="toggled" from="HUD/ServerButton" to="." method="_on_ServerButton_toggled"]
[connection signal="toggled" from="HUD/ClientButton" to="." method="_on_ClientButton_toggled"]
